2008-01-09 Samuel Abels <http://debain.org>

	* lib/Exscript/Fail.py: New built-in keyword "fail".

2008-01-02 Samuel Abels <http://debain.org>

	* exscript.py: Script may now also be used as a standard Python module.
	* lib/Exscript/Append.py: Add new built-in modifier "append".
	* lib/Exscript/stdlib/Device/model.py: New Exscript function "model()".
	* lib/Exscript/TerminalConnection/*: Fix: Better error message on prompt
	timeout.

2007-10-20 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/telnetlib.py: Fixed a bug that the prompt match
	would sometimes not add the correct content into the response buffer.
	* exscript.py: Added the --no-auto-logout switch.

2007-10-20 Samuel Abels <http://debain.org>

	* exscript.py: Fixed the "quit" command on Huawei routers.
	* Release 0.9.11

2007-10-09 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/Transport.py: Increase default timeout to 30
	seconds.
	* exscript.py, lib/Exscript/stdlib/Connection/send.py: Fix: exit/quit
	command.

2007-10-07 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/*.py, lib/Exscript/stdlib/Device/vendor.py:
	Improved operating system and vendor detection.
	* lib/Exscript/Regex.py: Added support for regular expression modifiers.
	* lib/Exscript/stdlib/Device/os.py: New builtin function device.os().
	* exscript.py: Execute "quit" instead of "exit" on Huawei routers.

2007-10-06 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/Connection/wait_for.py: New builtin function.
	* lib/Exscript/ExpressionNode.py: Decreased priority of the "not" operator.

2007-10-05 Samuel Abels <http://debain.org>

	* exscript.py: Added --no-prompt switch.

2007-10-31 Samuel Abels <http://debain.org>

	* exscript.py: Added -a and -n switches.
	* lib/FooLib/Interact.py: get_user(): New.
	* lib/TerminalConnection/*.py: Add support for Huawei routers.
	* lib/TerminalConnection/Transport.py: Improved prompt matching.

2007-10-02 Samuel Abels <http://debain.org>
